--- a/tgui-next/package.json
+++ b/tgui-next/package.json
@@ -5,38 +5,17 @@
 	"workspaces": [
 		"packages/*"
 	],
+	"scripts": {
+		"watch": "cd packages/tgui-dev-server && node --experimental-modules index.js",
+		"build": "cd packages/tgui && webpack --mode=production",
+		"analyze": "cd packages/tgui && webpack --mode=production --env.analyze=1",
+		"lint": "eslint packages",
+		"postinstall": "lerna bootstrap --hoist --no-ci && symlink-dir packages/common node_modules/common && symlink-dir packages/tgui node_modules/tgui && symlink-dir packages/tgui-dev-server node_modules/tgui-dev-server"
+	},
 	"dependencies": {
-		"@babel/core": "^7.6.2",
-		"@babel/plugin-transform-jscript": "^7.2.0",
-		"@babel/preset-env": "^7.6.2",
 		"babel-eslint": "^10.0.3",
-		"babel-loader": "^8.0.6",
-		"babel-plugin-inferno": "^6.1.0",
-		"babel-plugin-lodash": "^3.3.4",
-		"core-js": "^3.2.1",
-		"css-loader": "^3.2.0",
-		"cssnano": "^4.1.10",
 		"eslint": "^6.4.0",
-		"extract-css-chunks-webpack-plugin": "^4.6.0",
-		"fg-loadcss": "^2.1.0",
-		"fibers": "^4.0.1",
-		"file-loader": "^4.2.0",
-		"glob": "^7.1.4",
-		"inferno-shared": "7.3.1",
-		"inferno-vnode-flags": "7.3.1",
 		"lerna": "^3.16.4",
-		"lodash": "^4.17.15",
-		"optimize-css-assets-webpack-plugin": "^5.0.3",
-		"regenerator-runtime": "^0.13.3",
-		"sass": "^1.22.12",
-		"sass-loader": "^8.0.0",
-		"style-loader": "^1.0.0",
-		"symlink-dir": "^3.1.1",
-		"terser-webpack-plugin": "^2.1.0",
-		"webpack": "^4.40.2",
-		"webpack-build-notifier": "^1.1.1",
-		"webpack-bundle-analyzer": "^3.5.1",
-		"webpack-cli": "^3.3.9",
-		"ws": "^7.1.2"
+		"symlink-dir": "^3.1.1"
 	}
 }
