--- a/tgui-next/.gitattributes
+++ b/tgui-next/.gitattributes
@@ -7,4 +7,4 @@
 *.json text eol=lf
 
 ## Treat bundles as binary and ignore them during conflicts
-*.bundle.* binary merge=ours
+# *.bundle.* binary merge=theirs
