--- a/tgui-next/packages/tgui/package.json
+++ b/tgui-next/packages/tgui/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "^7.6.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-inferno": "^6.1.0",
+    "babel-plugin-macros": "^2.6.1",
     "core-js": "^3.2.1",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
@@ -22,6 +23,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.1.0",
+    "url-loader": "^2.2.0",
     "webpack": "^4.40.2",
     "webpack-build-notifier": "^1.1.1",
     "webpack-bundle-analyzer": "^3.5.1",
