--- a/tgui-next/.gitignore
+++ b/tgui-next/.gitignore
@@ -1,7 +1,4 @@
 node_modules
 *.log
+/packages/tgui/public/bundles/*.hot-update.*
 package-lock.json
-
-/packages/tgui/public/.tmp/**/*
-/packages/tgui/public/**/*.hot-update.*
-/packages/tgui/public/**/*.map
