--- a/tgui-next/packages/tgui/package.json
+++ b/tgui-next/packages/tgui/package.json
@@ -22,12 +22,9 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.1.0",
-    "url-loader": "^2.2.0",
     "webpack": "^4.40.2",
     "webpack-build-notifier": "^1.1.1",
-    "webpack-bundle-analyzer": "^3.5.1"
-  },
-  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.5.1",
     "webpack-cli": "^3.3.9"
   }
 }
