--- a/tgui-next/.eslintrc.yml
+++ b/tgui-next/.eslintrc.yml
@@ -7,11 +7,10 @@ parserOptions:
 env:
   browser: true
   node: true
-settings:
-  react:
-    version: '16.10'
 rules:
+
   ## Possible Errors
+  ## ----------------------------------------
   # for-direction: error
   # getter-return: error
   no-async-promise-executor: error
@@ -51,6 +50,7 @@ rules:
   valid-typeof: error
 
   ## Best practices
+  ## ----------------------------------------
   complexity: [error, { max: 50 }] ## That is a VERY generous limit
   curly: [error, all]
   eqeqeq: [error, always]
@@ -68,10 +68,11 @@ rules:
   radix: error
 
   ## Code style
+  ## ----------------------------------------
   array-bracket-newline: [error, consistent]
   array-bracket-spacing: [error, never]
   block-spacing: [error, always]
-  brace-style: [error, stroustrup, { allowSingleLine: false }]
+  # brace-style: [error, stroustrup, { allowSingleLine: false }]
   comma-dangle: [error, always-multiline]
   comma-spacing: [error, { before: false, after: true }]
   comma-style: [error, last]
@@ -108,6 +109,7 @@ rules:
   # unicode-bom: [error, never]
 
   ## ES6
+  ## ----------------------------------------
   arrow-parens: [error, as-needed]
   arrow-spacing: [error, { before: true, after: true }]
   generator-star-spacing: [error, { before: false, after: true }]
