--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,6 @@ after_failure:
 
 script:
   - (! grep 'step_[xy]' maps/**/*.dmm)
+  - (! grep '\bnew/' **/*.dm)
   - source $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}/byond/bin/byondsetup
   - bash dm.sh ${DM_BUILDFILE}
