--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ after_failure:
   - ./send-to-discord.sh failure $WEBHOOK_URL
 
 script:
+  - shopt -s globstar
   - (! grep 'step_[xy]' maps/**/*.dmm)
   - (! grep '\bnew/' **/*.dm)
   - source $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}/byond/bin/byondsetup
