--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Thumbs.db
 *.db
 *.db-*
 data/
+cfg/
 # ignore config, but not subdirs
 config/*
 !config/example/
@@ -21,9 +22,7 @@ reboot_called
 atupdate
 __pycache__
 
-# ignore config, but not subdirs
-!config/*/
-config/*
+
 sql/test_db
 
 # vscode specific files
