translate(code_phrase): русификация системы кодовых слов у трейторов
Заменяет английские слова на русские, с учётом окончаний (для дальнейшего использования для подсветки нужных слов в разговоре).

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ data/
 cfg/
 # ignore config, but not subdirs
 config/*
-!config/names/rus*
+!config/names/
 !config/example/
 !config/warnings_templates/
 build_log.txt
