--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ data/
 cfg/
 # ignore config, but not subdirs
 config/*
+!config/names/
 !config/example/
 !config/warnings_templates/
 build_log.txt
